samples/_failures_safe/1761627291_7dca60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bbec462.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9bbec462.c:159:5: error: expected expression at end of input
  159 |     if (lexer == NULL || tokens == NULL || token_count == NULL || max_tokens <= 0)
      |     ^~
./samples/SAFE/__tmp_9bbec462.c:159:5: error: expected declaration or statement at end of input
